--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,19 +5,42 @@
 		"**/.hg": true,
 		"**/CVS": true,
 		"**/.DS_Store": true,
-		"**/Thumbs.db": true
+		"**/Thumbs.db": true,
+		"**/node_modules": true,
+		"**/.svelte-kit": true
 	},
 	"hide-files.files": [],
 	"cSpell.words": [
 		"Audiphy",
 		"Azur",
+		"cirolosapio",
+		"devcontainers",
 		"developping",
 		"Dwida",
 		"Dwidder",
+		"engineeer",
+		"esbenp",
+		"fastapi",
+		"Fastify",
 		"garous",
 		"hoverable",
+		"Kamal",
+		"Kumar",
+		"Manipal",
+		"melishev",
+		"Numpy",
+		"Nuxt",
+		"ohmyzsh",
+		"olevel",
+		"Photoshop",
+		"rabbitmq",
+		"roonie",
+		"Ruvy",
+		"Scrapy",
+		"sourcer",
 		"Thierclieux",
 		"todos",
+		"unocss",
 		"Wroddit"
 	]
 }
