Updated pages excluding the skills and experience pages

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,34 +14,47 @@
 		"Audiphy",
 		"Azur",
 		"cirolosapio",
+		"collabera",
 		"devcontainers",
 		"developping",
+		"doeacc",
 		"Dwida",
 		"Dwidder",
 		"engineeer",
+		"epam",
 		"esbenp",
 		"fastapi",
 		"Fastify",
 		"garous",
+		"goldenimage",
+		"Gurugram",
 		"hoverable",
 		"Kamal",
+		"Kubernets",
 		"Kumar",
+		"Lseg",
 		"Manipal",
 		"melishev",
+		"mgmt",
 		"Numpy",
 		"Nuxt",
 		"ohmyzsh",
 		"olevel",
 		"Photoshop",
 		"rabbitmq",
+		"reactjs",
+		"Resumé",
 		"roonie",
 		"Ruvy",
 		"Scrapy",
 		"sourcer",
 		"stackoverflow",
+		"templ",
 		"Thierclieux",
 		"todos",
 		"unocss",
+		"vuln",
+		"winserver",
 		"Wroddit"
 	]
 }
