Updated the resume

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
 		"**/.DS_Store": true,
 		"**/Thumbs.db": true,
 		"**/node_modules": true,
+		"**/build": true,
 		"**/.svelte-kit": true
 	},
 	"hide-files.files": [],
