Added contact us form

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,7 @@
 		"esbenp",
 		"fastapi",
 		"Fastify",
+		"FORMKEY",
 		"garous",
 		"goldenimage",
 		"Gurugram",
@@ -42,6 +43,7 @@
 		"Nuxt",
 		"ohmyzsh",
 		"olevel",
+		"Ooops",
 		"Photoshop",
 		"rabbitmq",
 		"reactjs",
