Added certifications tab

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,10 +12,12 @@
 	},
 	"hide-files.files": [],
 	"cSpell.words": [
+		"adrani",
 		"Audiphy",
 		"Aworkaround",
 		"Azur",
 		"cirolosapio",
+		"ckad",
 		"collabera",
 		"devcontainers",
 		"developping",
@@ -37,6 +39,7 @@
 		"Kumar",
 		"Lseg",
 		"Manipal",
+		"mcsa",
 		"melishev",
 		"mgmt",
 		"Numpy",
@@ -48,6 +51,7 @@
 		"rabbitmq",
 		"reactjs",
 		"Resumé",
+		"riadh",
 		"roonie",
 		"Ruvy",
 		"Scrapy",
