added 3 new certifications

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,6 +32,7 @@
 		"FORMKEY",
 		"garous",
 		"goldenimage",
+		"Gravitee",
 		"Gurugram",
 		"hoverable",
 		"Kamal",
@@ -48,6 +49,7 @@
 		"olevel",
 		"Ooops",
 		"Photoshop",
+		"prodmgr",
 		"rabbitmq",
 		"reactjs",
 		"Resumé",
